--- a/package.json
+++ b/package.json
@@ -3,56 +3,79 @@
   "version": "1.0.0",
   "description": "Victor Hugo is a Hugo boilerplate for creating truly epic websites!",
   "main": "index.js",
+  "repository": "airjoshb/go-to-step-one",
   "scripts": {
     "hugo": "gulp hugo",
     "webpack": "gulp webpack",
     "build": "gulp build",
     "build-preview": "gulp build-preview",
     "start": "gulp server",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "build:css": "postcss src/css/main.css -o static/dist/main.css"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.0.0",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.13.0",
-    "babel-plugin-transform-class-properties": "^6.10.2",
-    "babel-plugin-transform-object-assign": "^6.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-register": "^6.11.6",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-object-assign": "^7.0.0",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "assets-webpack-plugin": "^3.9.7",
+    "autoprefixer": "^9.4.7",
+    "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.4",
     "browser-sync": "^2.13.0",
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^2.0.0",
     "cssnano": "^4.0.0",
     "date-fns": "^1.27.2",
-    "eslint": "^5.0.0",
-    "eslint-plugin-import": "^2.0.0",
+    "eslint": "^5.8.0",
+    "eslint-plugin-import": "^2.14.0",
     "exports-loader": "^0.7.0",
-    "file-loader": "^2.0.0",
+    "fancy-log": "^1.3.2",
+    "file-loader": "^3.0.0",
     "gotrue-js": "^0.9.1",
     "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-postcss": "^8.0.0",
+    "gulp-purgecss": "^1.1.1",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-util": "^3.0.7",
+    "hugo-bin": "^0.37.0",
     "imports-loader": "^0.8.0",
     "netlify-cms": "^2.3.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "plugin-error": "^1.0.1",
+    "postcss-cli": "^6.1.1",
     "postcss-cssnext": "^3.0.0",
-    "postcss-import": "^12.0.0",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-uncss": "^0.16.0",
-    "react": "16.7.0",
+    "postcss-preset-env": "^6.3.0",
+    "react": "^16.7.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
+    "slate": "^0.44.10",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "uncss": "^0.16.0",
-    "url-loader": "^1.0.0",
-    "webpack": "^3.0.0",
-    "whatwg-fetch": "^2.0.0"
+    "url-loader": "^1.1.2",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^1.1.0",
     "gulp-inject": "^5.0.0",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
-    "svg-sprite-loader": "^3.0.0"
+    "svg-sprite-loader": "^3.0.0",
+    "tailwindcss": "^0.7.4"
   }
 }
