--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
 [build]
-  command = "yarn build"
+  command = "npm run build"
   publish = "dist"
-[build.environment]
-  YARN_VERSION = "1.9.4"
 
 [context.deploy-preview]
-  command = "yarn build-preview"
+  command = "npm run build-preview"
