--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -48,7 +48,8 @@ collections: # A list of collections the CMS should be able to edit
               {label: "Text", name: "text", widget: "text"}]}
           - {label: "About", name: "about", widget: "object", fields: [
               {label: "Heading", name: "heading", widget: string},
-              {label: "Text", name: "text", widget: "text"}]}
+              {label: "Text", name: "text", widget: "text"},
+              {label: "Image", name: "image", widget: "image"}]}
       - file: "site/content/contact/_index.md"
         label: "Contact Page"
         name: "contact"
