--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
 [build]
   command = "npm run build"
   publish = "dist"
+[build.environment]
+  TZ = "America/Los_Angeles"
 
 [context.deploy-preview]
   command = "npm run build-preview"
