--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -37,6 +37,25 @@ collections: # A list of collections the CMS should be able to edit
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Image", name: "image", widget: "image", required: false}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "newsletter" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Newsletter" # Used in the UI, ie.: "New Post"
+    folder: "site/content/newsletter" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Publish Date", name: "date", widget: "datetime"}
+      - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "Body", name: "body", widget: "markdown"}
+      - {label: "Edition", name: "edition", widget: "string"}
+  - name: "gear" # Used in routes, ie.: /admin/collections/:slug/edit
+    label: "Gear" # Used in the UI, ie.: "New Post"
+    folder: "site/content/gear" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    fields: # The fields each document in this collection have
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "link", name: "link", widget: "string"}
+      - {label: "Image", name: "image", widget: "image", required: false}
+      - {label: "Body", name: "body", widget: "markdown"}
   - name: "pages"
     label: "Pages"
     files:
