--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "gulp-inject": "^5.0.0",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
+    "hugo-extended": "^0.98.0",
     "svg-sprite-loader": "^3.0.0",
     "tailwindcss": "^0.7.4"
   }
