--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   command = "CI= npm run build"
   publish = "dist"
 [build.environment]
-  tz = "America/Los_Angeles"
+  TZ = "America/Los_Angeles"
 
 [context.deploy-preview]
   command = "CI= npm run build-preview"
