--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
     "gulp-purgecss": "^1.1.1",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-util": "^3.0.7",
+    "hugo": "^0.0.3",
     "hugo-bin": "^0.37.0",
     "imports-loader": "^0.8.0",
-    "netlify-cms": "^2.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "plugin-error": "^1.0.1",
     "postcss-cli": "^6.1.1",
@@ -77,5 +77,8 @@
     "gulp-svgstore": "^6.1.0",
     "svg-sprite-loader": "^3.0.0",
     "tailwindcss": "^0.7.4"
+  },
+  "overrides": {
+    "graceful-fs": "^4.1.15"
   }
 }
